# grpc-uds

./: .gitignore  .gitmodules  BUDGET.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  Doxyfile  README.md  SECURITY.md  THIRD-PARTY-NOTICES  TODO.md  build.sh
.github/workflows/: ci.yml
cmake/: armv7-linux-gnueabihf.cmake
cpp/: CMakeLists.txt
cpp/include/grpcudspp/: client.h  grpcudspp.h  health.h  logging.h  server_builder.h  server_context.h  server_thread.h  server_writer.h  service.h  status.h  unary_responder.h
cpp/tests/: CMakeLists.txt  client_test.cc  echo_test.cc  grpc_message_test.cc  health_decode_test.cc  outbound_thread_test.cc  producer_io_split_test.cc  server_thread_test.cc
docker/: armv7-build.sh  armv7-cross.Dockerfile
docs/: BUILDING.md  CPP_API_GUIDE.md  C_API_GUIDE.md  FOOTPRINT.md  MIGRATING_FROM_GRPC_CPP.md  PACKAGING.md  SIZE_ANATOMY.md  THREADING.md
example/ble/: CMakeLists.txt  README.md  client_main.cc  run_demo.sh  server_main.cc
example/ble/cmake/: armv7-linux-gnueabihf.cmake
example/ble/proto/: ble.options  ble.proto
example/c/: CMakeLists.txt  README.md  client.c  run_demo.sh  server.c
rust/: Cargo.toml  deny.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/bindings/armv7/: README.md
rust/grpcuds/: Cargo.toml  LICENSE-APACHE  README.md
rust/grpcuds-build/: Cargo.toml  README.md
rust/grpcuds-build/src/: lib.rs
rust/grpcuds-core/: Cargo.toml  README.md
rust/grpcuds-core/src/: allocator.rs  client.rs  framing.rs  headers.rs  lib.rs  logging.rs  session.rs  uds.rs  wirelog.rs
rust/grpcuds-core/src/conn/: callbacks.rs  dispatch.rs  mod.rs  out_queue.rs  state.rs  tests.rs
rust/grpcuds-core/tests/: bench_pollfd.rs  bench_tick.rs  client_server.rs
rust/grpcuds-ffi/: Cargo.toml  README.md
rust/grpcuds-ffi-impl/: Cargo.toml  README.md
rust/grpcuds-ffi-impl/src/: client.rs  health.rs  lib.rs  logging.rs  mailbox.rs  server.rs
rust/grpcuds-ffi-impl/tests/: client.rs  echo.rs  health.rs
rust/grpcuds-ffi/include/: grpcuds.h
rust/grpcuds-ffi/pkgconfig/: grpcuds.pc.in
rust/grpcuds-ffi/src/: lib.rs
rust/grpcuds-sys/: Cargo.toml  README.md  build.rs  wrapper.h
rust/grpcuds-sys/src/: lib.rs
rust/grpcuds/examples/: echo_server.rs  echo_tokio.rs
rust/grpcuds/src/: client.rs  health.rs  lib.rs  logging.rs  server.rs
rust/grpcuds/tests/: client.rs  client_typed.rs  echo.rs  health.rs  logging.rs  serve_async.rs  tokio.rs  typed.rs  wirelog.rs  writer_feedback.rs
rust/grpcuds/tests/common/: mod.rs
rust/protoc-gen-grpcudspp/: Cargo.toml  LICENSE-MIT  README.md
rust/protoc-gen-grpcudspp/src/: main.rs
scripts/: gen-pkgconfig.sh  package.sh  release.sh
tests/: .gitignore
tests/bench/: Cargo.toml  README.md  build.rs  churn_rss.sh  helgrind.sh  helgrind_mailbox.c  measure_footprint.sh  measure_tables.sh  memcheck.sh
tests/bench/src/: lib.rs
tests/cpp/: CMakeLists.txt  README.md
tests/cpp/agent/: CMakeLists.txt  agent_client_check.h  agent_service_impl.cc  agent_service_impl.h
tests/cpp/agent/gg/: main.cc
tests/cpp/agent/grpcpp/: client_main.cc  server_main.cc
tests/cpp/agent/gt/: server_main.cc
tests/cpp/agent/measure/: client_main.cc
tests/cpp/agent/tg/: client_main.cc
tests/cpp/ble/: CMakeLists.txt  ble_service_impl.cc  ble_service_impl.h
tests/cpp/ble/gg/: main.cc
tests/cpp/ble/grpcpp/: client_main.cc  server_main.cc
tests/cpp/ble/gt/: server_main.cc
tests/cpp/ble/measure/: client_main.cc
tests/cpp/ble/tg/: client_main.cc
tests/cpp/cgen/: CMakeLists.txt  client_main.c  edge.proto  edge_compile.c  main.c
tests/cpp/cmake/: grpcuds_codegen.cmake  interop_pair.sh
tests/cpp/common/: mock_values.h  poll_loop.h
tests/cpp/proto/: agent.proto  agent_cpp.options  agent_cpp.proto  ble.options  ble.proto  x509.options
tests/cpp/x509/: CMakeLists.txt  x509_client_check.h  x509_service_impl.cc  x509_service_impl.h
tests/cpp/x509/gg/: main.cc
tests/cpp/x509/gt/: server_main.cc
tests/cpp/x509/tg/: client_main.cc
tests/rust/: Cargo.toml  README.md
tests/rust/cells/agent-gg/: Cargo.toml
tests/rust/cells/agent-gg/src/: main.rs
tests/rust/cells/agent-gg/tests/: e2e.rs
tests/rust/cells/agent-gt/: Cargo.toml
tests/rust/cells/agent-gt/src/: main.rs
tests/rust/cells/agent-gt/tests/: e2e.rs
tests/rust/cells/agent-tg/: Cargo.toml
tests/rust/cells/agent-tg/src/: main.rs
tests/rust/cells/agent-tg/tests/: e2e.rs
tests/rust/cells/ble-gg/: Cargo.toml
tests/rust/cells/ble-gg/src/: main.rs
tests/rust/cells/ble-gg/tests/: e2e.rs
tests/rust/cells/ble-gt/: Cargo.toml
tests/rust/cells/ble-gt/src/: main.rs
tests/rust/cells/ble-gt/tests/: e2e.rs
tests/rust/cells/ble-tg/: Cargo.toml
tests/rust/cells/ble-tg/src/: main.rs
tests/rust/cells/ble-tg/tests/: e2e.rs
tests/rust/cells/x509-gg/: Cargo.toml
tests/rust/cells/x509-gg/src/: main.rs
tests/rust/cells/x509-gg/tests/: e2e.rs
tests/rust/cells/x509-gt/: Cargo.toml
tests/rust/cells/x509-gt/src/: main.rs
tests/rust/cells/x509-gt/tests/: e2e.rs
tests/rust/cells/x509-tg/: Cargo.toml
tests/rust/cells/x509-tg/src/: main.rs
tests/rust/cells/x509-tg/tests/: e2e.rs
tests/rust/cross/: Cargo.toml
tests/rust/cross/src/: lib.rs
tests/rust/cross/tests/: agent.rs  ble.rs  health_stock.rs  proto_sync.rs  x509.rs
tests/rust/domains/agent-domain/: Cargo.toml  build.rs
tests/rust/domains/agent-domain/src/: assistant.rs  lib.rs
tests/rust/domains/ble-domain/: Cargo.toml  build.rs
tests/rust/domains/ble-domain/src/: lib.rs
tests/rust/domains/x509-domain/: Cargo.toml  build.rs
tests/rust/domains/x509-domain/src/: lib.rs
tests/rust/proto/: x509.proto
tests/rust/shared/uds-harness/: Cargo.toml
tests/rust/shared/uds-harness/src/: lib.rs
tests/rust/sizebench/: Cargo.toml
tests/rust/sizebench/src/: agent_grpcuds_client.rs  agent_grpcuds_server.rs  agent_tonic_client.rs  agent_tonic_server.rs  ble_grpcuds_client.rs  ble_grpcuds_client_stub.rs  ble_grpcuds_server.rs  ble_tonic_client.rs  ble_tonic_server.rs
