[workspace]
resolver = "2"
members = [
    "grpcuds-sys",
    "grpcuds-core",
    "grpcuds-ffi",
    "grpcuds-ffi-impl",
    "grpcuds",
    "protoc-gen-grpcudspp",
    "grpcuds-build",
]
# The interop tests are their own workspace (tests/rust/) with relaxed
# profiles and heavy deps (tonic/tokio), outside this strict no_std tree.


[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/sy39ju/grpc-uds"
homepage = "https://github.com/sy39ju/grpc-uds"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
debug = false
overflow-checks = false

[profile.dev]
panic = "abort"
