[package]
name = "grpcuds-build"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "build.rs codegen for grpcuds: prost messages, typed server traits, and client stubs from .proto (tonic-build's shape)."
readme = "README.md"
keywords = ["grpc", "uds", "protobuf", "codegen", "prost"]
categories = ["development-tools::build-utils", "network-programming"]

[lib]
doctest = false

[dependencies]
prost-build = "0.14"

[package.metadata.docs.rs]
# UDS + system libnghttp2: Linux-only by design.
targets = ["x86_64-unknown-linux-gnu", "armv7-unknown-linux-gnueabihf"]
